fix: add spacing privacy links

--- a/less/footer/branding.less
+++ b/less/footer/branding.less
@@ -48,6 +48,10 @@
     }
 
     .footer-privacy-container {
+      display: flex;
+      margin-bottom: 16px;
+      gap: 16px;
+      flex-wrap: wrap;
       margin-bottom: 16px;
     }
 
